# qyzc_workpiece_measurement

./: CMakeLists.txt  README.md  package.xml
debug/: transformed_keyboard_1_1_12_1755226589.pcd  transformed_keyboard_1_1_36_1755250639.pcd  transformed_keyboard_1_1_36_1755250674.pcd
docs/: KEY_ANGLES.md
include/pose_measurement/: measurement_calculator.h  point_cloud_processor.h  pose_estimator.h
launch/: pose_measurement.launch
results/: measurements.csv
scripts/: test_dataset.py
src/: measurement_calculator.cpp  point_cloud_processor.cpp  pose_estimator.cpp  pose_measurement_node.cpp
